--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
-    "express": "~4.16.1",
+    "express": "^4.18.1",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "jsonwebtoken": "^8.5.1",
